# juudge-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cspell.config.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  init.bash
docker-resources/: logging.yaml  main.bash
sample-files/: dotenv
src/juudge/: assistant.py  data.py  import.py  model.py  plumbing.py
src/juudge/web/: dependencies.py  model.py  settings.py  web.py
tests/: test_data.py
tests/data/: atomic.json  detailed-set.json  rules.txt
